networking/internal-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name:  internal-policy
  namespace: default
spec:
  policyTypes:
    - Egress
    - Ingress
  podSelector:
    matchLabels:
      name: internal
  ingress:
    - {}
  egress:
    - to:
      - podSelector:
          matchLabels:
            name: payroll-service
      ports:
      - port: 8080
        protocol: TCP   
    - to: 
      - podSelector:
          matchLabels:
            name: mysql            
      ports:
        - port: 3306
