networking/sample-beckend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-pod-network-policy
spec:
  podSelector:
    matchLabels:
      role: back-end-pod
  egress:
    - to: 
       - podSelector:
           matchLabels:
              role: database-pod
      ports:
        - port : 6379
  ingress:
    - from:
      - podSelector:
          matchLabels:
              role: fornt-end
      ports:
        - port : 8080
